# G42.AI-interview-test-task

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  example-config.json  manage.py  pyproject.toml
app/: containers.py  main.py
app/api/rest/: controllers.py
app/api/rest/internal/: controllers.py
app/api/rest/internal/v1/: __init__.py
app/api/rest/internal/v1/upload/: api.py
app/app_layer/interfaces/services/csv_normalization/: __init__.py  dto.py  exceptions.py  normalizer.py  service.py
app/app_layer/services/csv_normalization/: __init__.py  normalizer.py  service.py
app/configs/: api.py  base.py  data_normalizer.py  logging.py  uvicorn.py
tests/: conftest.py  test_api_normalize.py  test_csv_service_integration.py  test_data_normalizer_dob.py
tests/fixtures/: app.py  files.py  services.py
tests/resources/: input_data.csv  test.csv
